Air 적용 Swaggo 중간 저장
